сменил имя файла html

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
           content="Devorno веб студия, web studio Devorno, создание веб сайтов, разработка сайтов, дорогой дизайн, заказать сайт, посчитать стоимость сайта, сколько стоит сайт">
     <!--Стереть после редактирования-->
     <link rel="stylesheet" href="team.css">
-    <base href="http://devorno.ru">
+    <base href="http://devorno.ru/">
     <!--Стереть после редактирования-->
     <link rel="stylesheet" type="text/css" href="style.css">
     <link rel="stylesheet" type="text/css" href="css/sumoselect.min.css">
