--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
     <link rel="stylesheet" type="text/css" href="css/sumoselect.min.css">
     <link rel="stylesheet" href="morphext.css">
     <link rel="stylesheet" href="team.css">
+    <link rel="stylesheet" type="text/css"
+        href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="libs/OwlCarousel/assets/owl.carousel.min.css">
     <!-- Facebook Pixel Code -->
     <script>
