--- a/index.html
+++ b/index.html
@@ -1300,7 +1300,7 @@
         </div>
     </footer>
 
-    <script src="js/jquery.js"></script>
+    <script src="jquery.js" type="text/javascript"></script>
     <script src="js/libs.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/gasparesganga-jquery-loading-overlay@1.5.4/src/loadingoverlay.min.js"></script>
     <script type="text/javascript" src="js/jquery.sumoselect.min.js"></script>
