--- a/index.html
+++ b/index.html
@@ -1299,8 +1299,9 @@
             </div>
         </div>
     </footer>
-
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
     <script src="jquery.js" type="text/javascript"></script>
+    <script src="js/jquery.js" type="text/javascript"></script>
     <script src="js/libs.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/gasparesganga-jquery-loading-overlay@1.5.4/src/loadingoverlay.min.js"></script>
     <script type="text/javascript" src="js/jquery.sumoselect.min.js"></script>
