правка хедера и банера

--- a/index.html
+++ b/index.html
@@ -100,7 +100,6 @@
     <!-- /Yandex.Metrika counter -->
 
     <header class="main-header" id="main-header">
-        <div class="main-header__top-banner"></div>
         <div class="main-header__menu-bg">
             <div class="container">
                 <nav class="main-header__nav">
@@ -128,12 +127,20 @@
                             </a>
                         </li>
                         <li>
-                            <a class="main-header__nav__list--item" href="lnd.html#calc">Стоимость</a>
+                            <a class="main-header__nav__list--item" href="lnd.html#calc">Калькулятор</a>
+                        </li>
+                        <li>
+                            <img class="img-phone" src="img/general/phone-call-white.png" alt="Phone call">
+                            <a class="main-form__left__user-controls__info--phone"
+                               id="ahrefTelMainPage" href="tel:+380614567893">
+                              +38 061 456 7893
+                            </a>
                         </li>
                     </ul>
                 </nav>
             </div>
         </div>
+        <div class="main-header__top-banner"></div>
     </header>
 
     <main>
