--- a/index.html
+++ b/index.html
@@ -1225,6 +1225,7 @@
 
 
                 </div>
+                <div class="hr-line"></div>
                 <ul class="main-aside__orange__menu">
                     <li class="main-aside__orange__menu--item">
                         <a href="lnd.html#why-we">
@@ -1245,6 +1246,7 @@
                         <a href="lnd.html#calc">Стоимость</a>
                     </li>
                 </ul>
+                <div class="hr-line"></div>
                 <ul class="main-aside__orange__social">
                     <li class="main-aside__orange__social--item">
                         <a href="lnd.html#">
