--- a/index.html
+++ b/index.html
@@ -570,86 +570,86 @@
                 </div>
               </li>
             </ul>
-            <ul id="carousel" class="team-items owl-carousel owl-theme">
-              <li class="team__item member-1">
-                <div class="team__item--hexagon">
-                  <div class="hexagon">
-                    <div class="hexTop"></div>
-                    <div class="hexBottom"></div>
-                  </div>
-                  <div class="hexagon--border"></div>
-                </div>
-                <div class="team__item--description">
-                  <h5>Имя Фамилия</h5>
-                  <p>Должность</p>
-                </div>
-              </li>
-              <li class="team__item member-2">
-                <div class="team__item--hexagon">
-                  <div class="hexagon">
-                    <div class="hexTop"></div>
-                    <div class="hexBottom"></div>
-                  </div>
-                  <div class="hexagon--border"></div>
-                </div>
-                <div class="team__item--description">
-                  <h5>Имя Фамилия</h5>
-                  <p>Должность</p>
-                </div>
-              </li>
-              <li class="team__item member-3">
-                <div class="team__item--hexagon">
-                  <div class="hexagon">
-                    <div class="hexTop"></div>
-                    <div class="hexBottom"></div>
-                  </div>
-                  <div class="hexagon--border"></div>
-                </div>
-                <div class="team__item--description">
-                  <h5>Имя Фамилия</h5>
-                  <p>Должность</p>
-                </div>
-              </li>
-              <li class="team__item member-4">
-                <div class="team__item--hexagon">
-                  <div class="hexagon">
-                    <div class="hexTop"></div>
-                    <div class="hexBottom"></div>
-                  </div>
-                  <div class="hexagon--border"></div>
-                </div>
-                <div class="team__item--description">
-                  <h5>Имя Фамилия</h5>
-                  <p>Должность</p>
-                </div>
-              </li>
-              <li class="team__item member-5">
-                <div class="team__item--hexagon">
-                  <div class="hexagon">
-                    <div class="hexTop"></div>
-                    <div class="hexBottom"></div>
-                  </div>
-                  <div class="hexagon--border"></div>
-                </div>
-                <div class="team__item--description">
-                  <h5>Имя Фамилия</h5>
-                  <p>Должность</p>
-                </div>
-              </li>
-              <li class="team__item member-6">
-                <div class="team__item--hexagon">
-                  <div class="hexagon">
-                    <div class="hexTop"></div>
-                    <div class="hexBottom"></div>
-                  </div>
-                  <div class="hexagon--border"></div>
-                </div>
-                <div class="team__item--description">
-                  <h5>Имя Фамилия</h5>
-                  <p>Должность</p>
-                </div>
-              </li>
-            </ul>
+            <!--<ul id="carousel" class="team-items owl-carousel owl-theme">-->
+              <!--<li class="team__item member-1">-->
+                <!--<div class="team__item&#45;&#45;hexagon">-->
+                  <!--<div class="hexagon">-->
+                    <!--<div class="hexTop"></div>-->
+                    <!--<div class="hexBottom"></div>-->
+                  <!--</div>-->
+                  <!--<div class="hexagon&#45;&#45;border"></div>-->
+                <!--</div>-->
+                <!--<div class="team__item&#45;&#45;description">-->
+                  <!--<h5>Имя Фамилия</h5>-->
+                  <!--<p>Должность</p>-->
+                <!--</div>-->
+              <!--</li>-->
+              <!--<li class="team__item member-2">-->
+                <!--<div class="team__item&#45;&#45;hexagon">-->
+                  <!--<div class="hexagon">-->
+                    <!--<div class="hexTop"></div>-->
+                    <!--<div class="hexBottom"></div>-->
+                  <!--</div>-->
+                  <!--<div class="hexagon&#45;&#45;border"></div>-->
+                <!--</div>-->
+                <!--<div class="team__item&#45;&#45;description">-->
+                  <!--<h5>Имя Фамилия</h5>-->
+                  <!--<p>Должность</p>-->
+                <!--</div>-->
+              <!--</li>-->
+              <!--<li class="team__item member-3">-->
+                <!--<div class="team__item&#45;&#45;hexagon">-->
+                  <!--<div class="hexagon">-->
+                    <!--<div class="hexTop"></div>-->
+                    <!--<div class="hexBottom"></div>-->
+                  <!--</div>-->
+                  <!--<div class="hexagon&#45;&#45;border"></div>-->
+                <!--</div>-->
+                <!--<div class="team__item&#45;&#45;description">-->
+                  <!--<h5>Имя Фамилия</h5>-->
+                  <!--<p>Должность</p>-->
+                <!--</div>-->
+              <!--</li>-->
+              <!--<li class="team__item member-4">-->
+                <!--<div class="team__item&#45;&#45;hexagon">-->
+                  <!--<div class="hexagon">-->
+                    <!--<div class="hexTop"></div>-->
+                    <!--<div class="hexBottom"></div>-->
+                  <!--</div>-->
+                  <!--<div class="hexagon&#45;&#45;border"></div>-->
+                <!--</div>-->
+                <!--<div class="team__item&#45;&#45;description">-->
+                  <!--<h5>Имя Фамилия</h5>-->
+                  <!--<p>Должность</p>-->
+                <!--</div>-->
+              <!--</li>-->
+              <!--<li class="team__item member-5">-->
+                <!--<div class="team__item&#45;&#45;hexagon">-->
+                  <!--<div class="hexagon">-->
+                    <!--<div class="hexTop"></div>-->
+                    <!--<div class="hexBottom"></div>-->
+                  <!--</div>-->
+                  <!--<div class="hexagon&#45;&#45;border"></div>-->
+                <!--</div>-->
+                <!--<div class="team__item&#45;&#45;description">-->
+                  <!--<h5>Имя Фамилия</h5>-->
+                  <!--<p>Должность</p>-->
+                <!--</div>-->
+              <!--</li>-->
+              <!--<li class="team__item member-6">-->
+                <!--<div class="team__item&#45;&#45;hexagon">-->
+                  <!--<div class="hexagon">-->
+                    <!--<div class="hexTop"></div>-->
+                    <!--<div class="hexBottom"></div>-->
+                  <!--</div>-->
+                  <!--<div class="hexagon&#45;&#45;border"></div>-->
+                <!--</div>-->
+                <!--<div class="team__item&#45;&#45;description">-->
+                  <!--<h5>Имя Фамилия</h5>-->
+                  <!--<p>Должность</p>-->
+                <!--</div>-->
+              <!--</li>-->
+            <!--</ul>-->
           </div>
         </section>
       
@@ -1449,13 +1449,13 @@
     <script type="text/javascript">
         $(document).ready(function() {
           var windowWidth = $(window).width();
-          if(windowWidth < 738)$("#teamItems").addClass("owl-carousel");
-          else $("#teamItems").removeClass("owl-carousel");
+          if(windowWidth < 738)$("#teamItems").addClass("owl-carousel owl-theme");
+          else $("#teamItems").removeClass("owl-carousel owl-theme");
 
           $(window).resize(function(){
             var windowWidth = $(window).width();
-            if(windowWidth < 738)$("#teamItems").addClass("owl-carousel");
-            else $("#teamItems").removeClass("owl-carousel");
+            if(windowWidth < 738)$("#teamItems").addClass("owl-carousel owl-theme");
+            else $("#teamItems").removeClass("owl-carousel owl-theme");
           });
         });
         //------------ menu hamburger -----------
