поменял местами линк овл-карусели

--- a/index.html
+++ b/index.html
@@ -25,9 +25,10 @@
     <link rel="stylesheet" type="text/css" href="style.css">
     <link rel="stylesheet" type="text/css" href="css/sumoselect.min.css">
     <link rel="stylesheet" href="morphext.css">
-    <link rel="stylesheet" href="libs/OwlCarousel/assets/owl.carousel.min.css">
+    
     <link rel="stylesheet" href="libs/OwlCarousel/assets/owl.theme.default.min.css">
     <link rel="stylesheet" href="team.css">
+    <link rel="stylesheet" href="libs/OwlCarousel/assets/owl.carousel.min.css">
     <link rel="stylesheet" type="text/css"
         href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
     <!-- Facebook Pixel Code -->
@@ -570,86 +571,86 @@
                 </div>
               </li>
             </ul>
-            <!--<ul id="carousel" class="team-items owl-carousel owl-theme">-->
-              <!--<li class="team__item member-1">-->
-                <!--<div class="team__item&#45;&#45;hexagon">-->
-                  <!--<div class="hexagon">-->
-                    <!--<div class="hexTop"></div>-->
-                    <!--<div class="hexBottom"></div>-->
-                  <!--</div>-->
-                  <!--<div class="hexagon&#45;&#45;border"></div>-->
-                <!--</div>-->
-                <!--<div class="team__item&#45;&#45;description">-->
-                  <!--<h5>Имя Фамилия</h5>-->
-                  <!--<p>Должность</p>-->
-                <!--</div>-->
-              <!--</li>-->
-              <!--<li class="team__item member-2">-->
-                <!--<div class="team__item&#45;&#45;hexagon">-->
-                  <!--<div class="hexagon">-->
-                    <!--<div class="hexTop"></div>-->
-                    <!--<div class="hexBottom"></div>-->
-                  <!--</div>-->
-                  <!--<div class="hexagon&#45;&#45;border"></div>-->
-                <!--</div>-->
-                <!--<div class="team__item&#45;&#45;description">-->
-                  <!--<h5>Имя Фамилия</h5>-->
-                  <!--<p>Должность</p>-->
-                <!--</div>-->
-              <!--</li>-->
-              <!--<li class="team__item member-3">-->
-                <!--<div class="team__item&#45;&#45;hexagon">-->
-                  <!--<div class="hexagon">-->
-                    <!--<div class="hexTop"></div>-->
-                    <!--<div class="hexBottom"></div>-->
-                  <!--</div>-->
-                  <!--<div class="hexagon&#45;&#45;border"></div>-->
-                <!--</div>-->
-                <!--<div class="team__item&#45;&#45;description">-->
-                  <!--<h5>Имя Фамилия</h5>-->
-                  <!--<p>Должность</p>-->
-                <!--</div>-->
-              <!--</li>-->
-              <!--<li class="team__item member-4">-->
-                <!--<div class="team__item&#45;&#45;hexagon">-->
-                  <!--<div class="hexagon">-->
-                    <!--<div class="hexTop"></div>-->
-                    <!--<div class="hexBottom"></div>-->
-                  <!--</div>-->
-                  <!--<div class="hexagon&#45;&#45;border"></div>-->
-                <!--</div>-->
-                <!--<div class="team__item&#45;&#45;description">-->
-                  <!--<h5>Имя Фамилия</h5>-->
-                  <!--<p>Должность</p>-->
-                <!--</div>-->
-              <!--</li>-->
-              <!--<li class="team__item member-5">-->
-                <!--<div class="team__item&#45;&#45;hexagon">-->
-                  <!--<div class="hexagon">-->
-                    <!--<div class="hexTop"></div>-->
-                    <!--<div class="hexBottom"></div>-->
-                  <!--</div>-->
-                  <!--<div class="hexagon&#45;&#45;border"></div>-->
-                <!--</div>-->
-                <!--<div class="team__item&#45;&#45;description">-->
-                  <!--<h5>Имя Фамилия</h5>-->
-                  <!--<p>Должность</p>-->
-                <!--</div>-->
-              <!--</li>-->
-              <!--<li class="team__item member-6">-->
-                <!--<div class="team__item&#45;&#45;hexagon">-->
-                  <!--<div class="hexagon">-->
-                    <!--<div class="hexTop"></div>-->
-                    <!--<div class="hexBottom"></div>-->
-                  <!--</div>-->
-                  <!--<div class="hexagon&#45;&#45;border"></div>-->
-                <!--</div>-->
-                <!--<div class="team__item&#45;&#45;description">-->
-                  <!--<h5>Имя Фамилия</h5>-->
-                  <!--<p>Должность</p>-->
-                <!--</div>-->
-              <!--</li>-->
-            <!--</ul>-->
+            <ul id="carousel" class="team-items owl-carousel owl-theme">
+              <li class="team__item member-1">
+                <div class="team__item--hexagon">
+                  <div class="hexagon">
+                    <div class="hexTop"></div>
+                    <div class="hexBottom"></div>
+                  </div>
+                  <div class="hexagon--border"></div>
+                </div>
+                <div class="team__item--description">
+                  <h5>Имя Фамилия</h5>
+                  <p>Должность</p>
+                </div>
+              </li>
+              <li class="team__item member-2">
+                <div class="team__item--hexagon">
+                  <div class="hexagon">
+                    <div class="hexTop"></div>
+                    <div class="hexBottom"></div>
+                  </div>
+                  <div class="hexagon--border"></div>
+                </div>
+                <div class="team__item--description">
+                  <h5>Имя Фамилия</h5>
+                  <p>Должность</p>
+                </div>
+              </li>
+              <li class="team__item member-3">
+                <div class="team__item--hexagon">
+                  <div class="hexagon">
+                    <div class="hexTop"></div>
+                    <div class="hexBottom"></div>
+                  </div>
+                  <div class="hexagon--border"></div>
+                </div>
+                <div class="team__item--description">
+                  <h5>Имя Фамилия</h5>
+                  <p>Должность</p>
+                </div>
+              </li>
+              <li class="team__item member-4">
+                <div class="team__item--hexagon">
+                  <div class="hexagon">
+                    <div class="hexTop"></div>
+                    <div class="hexBottom"></div>
+                  </div>
+                  <div class="hexagon--border"></div>
+                </div>
+                <div class="team__item--description">
+                  <h5>Имя Фамилия</h5>
+                  <p>Должность</p>
+                </div>
+              </li>
+              <li class="team__item member-5">
+                <div class="team__item--hexagon">
+                  <div class="hexagon">
+                    <div class="hexTop"></div>
+                    <div class="hexBottom"></div>
+                  </div>
+                  <div class="hexagon--border"></div>
+                </div>
+                <div class="team__item--description">
+                  <h5>Имя Фамилия</h5>
+                  <p>Должность</p>
+                </div>
+              </li>
+              <li class="team__item member-6">
+                <div class="team__item--hexagon">
+                  <div class="hexagon">
+                    <div class="hexTop"></div>
+                    <div class="hexBottom"></div>
+                  </div>
+                  <div class="hexagon--border"></div>
+                </div>
+                <div class="team__item--description">
+                  <h5>Имя Фамилия</h5>
+                  <p>Должность</p>
+                </div>
+              </li>
+            </ul>
           </div>
         </section>
       
