адптив верхнего меню

--- a/index.html
+++ b/index.html
@@ -134,6 +134,11 @@
                             </a>
                         </li>
                     </ul>
+                    <div class="hamburger hamburger--slider js-hamburger">
+                      <div class="hamburger-box">
+                        <div class="hamburger-inner"></div>
+                    </div>
+                </div>
                 </nav>
             </div>
         </div>
