адптив верхнего меню

--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@
                 </div>
                 
                 <div class="main-form__title">
-                  <h2>Профессиональная  разработка сайтов  <span>под ключ в Украине</span></h2>
+                  <h2>Профессиональная<br>  разработка сайтов<br>  <span>под ключ в Украине</span></h2>
                 </div>
   
               <!-- /.main-form -->
@@ -1234,22 +1234,22 @@
                 <div class="hr-line"></div>
                 <ul class="main-aside__orange__menu">
                     <li class="main-aside__orange__menu--item">
-                        <a href="lnd.html#why-we">
+                        <a href="#why-we">
                             О
                             нас
                         </a>
                     </li>
                     <li class="main-aside__orange__menu--item">
-                        <a href="lnd.html#portfolio">Портфолио</a>
+                        <a href="#portfolio">Портфолио</a>
                     </li>
                     <li class="main-aside__orange__menu--item">
-                        <a href="lnd.html#skills">
+                        <a href="#skills">
                             Наши
                             навыки
                         </a>
                     </li>
                     <li class="main-aside__orange__menu--item">
-                        <a href="lnd.html#calc">Стоимость</a>
+                        <a href="#calc">Стоимость</a>
                     </li>
                 </ul>
                 <div class="hr-line"></div>
