--- a/index.html
+++ b/index.html
@@ -133,6 +133,14 @@
                             <a class="main-form__left__user-controls__info--phone"  href="tel:+380614567893">+38 061 456 7893
                             </a>
                         </li>
+                        <li class="main-header__nav__list--item mob-phone">
+                            <img class="img-phone" src="img/general/phone-call-white.png" alt="Phone call">
+                            <a class="main-form__left__user-controls__info--phone"  href="tel:+380614567893">+38 061 456 7893
+                            </a>
+                        </li>
+                        <li class="main-header__nav__list--item mob-email">
+                          <svg xmlns="http://www.w3.org/2000/svg" width="35" height="28" viewBox="0 0 29 22"><path fill="#fff" d="M25.4 0H3.6C1.6 0 0 1.6 0 3.7v14.7c0 2 1.6 3.7 3.6 3.7h21.7c2 0 3.6-1.6 3.6-3.7V3.7C29 1.6 27.4 0 25.4 0zm-6 9.8l7.7-6.7c.1.2.1.3.1.5v14.7c0 .1 0 .2-.1.4l-7.7-8.9zm6-8c.1 0 .2 0 .3.1l-11.2 9.7L3.3 1.9c.1 0 .2-.1.3-.1h21.8zM1.9 18.7c0-.1-.1-.2-.1-.4V3.7c0-.2.1-.4.1-.5l7.7 6.6-7.7 8.9zm1.7 1.5c-.2 0-.3-.1-.5-.1L11 11l2.9 2.6c.2.1.4.2.6.2.2 0 .4-.1.6-.2L18 11l7.9 9.1c-.2.1-.3.1-.5.1H3.6zm0 0"></path></svg>
+                      </li>
                     </ul>
                     <div class="hamburger hamburger--slider js-hamburger">
                       <div class="hamburger-box">
