--- a/index.html
+++ b/index.html
@@ -153,20 +153,20 @@
         <ul class="main-header__top-banner owl-carousel owl-theme">
           <li class="main-header__top-banner--slide1">
             <div class="slider-content">
-              <h3>Лендинг в рассрочку, от 1990/месяц</h3>
-              <input type="button" class="btn-top-banner" value="Заказать">
+              <h3>Лендинг в рассрочку,<br> от 1990/месяц</h3>
+              <input type="button" class="btn-top-banner g-btn" value="Заказать">
             </div>
           </li>
           <li class="main-header__top-banner--slide2">
             <div class="slider-content">
-              <h3>Делаем сайты с любовью и без "движков"</h3>
-              <input type="button" class="btn-top-banner" value="Заказать">
+              <h3>Делаем сайты с любовью<br> и без "движков"</h3>
+              <input type="button" class="btn-top-banner g-btn" value="Заказать">
             </div>
           </li>
           <li class="main-header__top-banner--slide3">
             <div class="slider-content">
-              <h3>Наши сайты полюбят Ваши клиенты!</h3>
-              <input type="button" class="btn-top-banner" value="Заказать">
+              <h3>Наши сайты полюбят<br> Ваши клиенты!</h3>
+              <input type="button" class="btn-top-banner g-btn" value="Заказать">
             </div>
           </li>
         </ul>
@@ -1422,7 +1422,7 @@
       $('.main-header__top-banner').owlCarousel({
         loop:true,
         center: true,
-        autoplay:true,
+        autoplay:false,
         autoplayTimeout:4000,
         responsive:{
           0:{
